/**
 * OpenAPI definition
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 *
 */

import ApiClient from '../ApiClient';

/**
 * The Institute model module.
 * @module model/Institute
 * @version v0
 */
class Institute {
    /**
     * Constructs a new <code>Institute</code>.
     * @alias module:model/Institute
     */
    constructor() { 
        
        Institute.initialize(this);
    }

    /**
     * Initializes the fields of this object.
     * This method is used by the constructors of any subclasses, in order to implement multiple inheritance (mix-ins).
     * Only for internal use.
     */
    static initialize(obj) { 
    }

    /**
     * Constructs a <code>Institute</code> from a plain JavaScript object, optionally creating a new instance.
     * Copies all relevant properties from <code>data</code> to <code>obj</code> if supplied or a new instance if not.
     * @param {Object} data The plain JavaScript object bearing properties of interest.
     * @param {module:model/Institute} obj Optional instance to populate.
     * @return {module:model/Institute} The populated <code>Institute</code> instance.
     */
    static constructFromObject(data, obj) {
        if (data) {
            obj = obj || new Institute();

            if (data.hasOwnProperty('name')) {
                obj['name'] = ApiClient.convertToType(data['name'], 'String');
            }
            if (data.hasOwnProperty('id')) {
                obj['id'] = ApiClient.convertToType(data['id'], 'String');
            }
            if (data.hasOwnProperty('logoUrl')) {
                obj['logoUrl'] = ApiClient.convertToType(data['logoUrl'], 'String');
            }
            if (data.hasOwnProperty('email')) {
                obj['email'] = ApiClient.convertToType(data['email'], 'String');
            }
            if (data.hasOwnProperty('phone')) {
                obj['phone'] = ApiClient.convertToType(data['phone'], 'String');
            }
        }
        return obj;
    }


}

/**
 * @member {String} name
 */
Institute.prototype['name'] = undefined;

/**
 * @member {String} id
 */
Institute.prototype['id'] = undefined;

/**
 * @member {String} logoUrl
 */
Institute.prototype['logoUrl'] = undefined;

/**
 * @member {String} email
 */
Institute.prototype['email'] = undefined;

/**
 * @member {String} phone
 */
Institute.prototype['phone'] = undefined;






export default Institute;

