/**
 * OpenAPI definition
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 *
 */

import ApiClient from '../ApiClient';
import QueueSpec from './QueueSpec';

/**
 * The Queue model module.
 * @module model/Queue
 * @version v0
 */
class Queue {
    /**
     * Constructs a new <code>Queue</code>.
     * @alias module:model/Queue
     */
    constructor() { 
        
        Queue.initialize(this);
    }

    /**
     * Initializes the fields of this object.
     * This method is used by the constructors of any subclasses, in order to implement multiple inheritance (mix-ins).
     * Only for internal use.
     */
    static initialize(obj) { 
    }

    /**
     * Constructs a <code>Queue</code> from a plain JavaScript object, optionally creating a new instance.
     * Copies all relevant properties from <code>data</code> to <code>obj</code> if supplied or a new instance if not.
     * @param {Object} data The plain JavaScript object bearing properties of interest.
     * @param {module:model/Queue} obj Optional instance to populate.
     * @return {module:model/Queue} The populated <code>Queue</code> instance.
     */
    static constructFromObject(data, obj) {
        if (data) {
            obj = obj || new Queue();

            if (data.hasOwnProperty('queueSpec')) {
                obj['queueSpec'] = QueueSpec.constructFromObject(data['queueSpec']);
            }
            if (data.hasOwnProperty('queueSize')) {
                obj['queueSize'] = ApiClient.convertToType(data['queueSize'], 'Number');
            }
            if (data.hasOwnProperty('physicalSize')) {
                obj['physicalSize'] = ApiClient.convertToType(data['physicalSize'], 'Number');
            }
            if (data.hasOwnProperty('remoteSize')) {
                obj['remoteSize'] = ApiClient.convertToType(data['remoteSize'], 'Number');
            }
            if (data.hasOwnProperty('averageTime')) {
                obj['averageTime'] = ApiClient.convertToType(data['averageTime'], 'Number');
            }
            if (data.hasOwnProperty('currentTurnId')) {
                obj['currentTurnId'] = ApiClient.convertToType(data['currentTurnId'], 'String');
            }
        }
        return obj;
    }


}

/**
 * @member {module:model/QueueSpec} queueSpec
 */
Queue.prototype['queueSpec'] = undefined;

/**
 * @member {Number} queueSize
 */
Queue.prototype['queueSize'] = undefined;

/**
 * @member {Number} physicalSize
 */
Queue.prototype['physicalSize'] = undefined;

/**
 * @member {Number} remoteSize
 */
Queue.prototype['remoteSize'] = undefined;

/**
 * @member {Number} averageTime
 */
Queue.prototype['averageTime'] = undefined;

/**
 * @member {String} currentTurnId
 */
Queue.prototype['currentTurnId'] = undefined;






export default Queue;

