/**
 * OpenAPI definition
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 *
 */

import ApiClient from '../ApiClient';

/**
 * The QueueSpec model module.
 * @module model/QueueSpec
 * @version v0
 */
class QueueSpec {
    /**
     * Constructs a new <code>QueueSpec</code>.
     * @alias module:model/QueueSpec
     */
    constructor() { 
        
        QueueSpec.initialize(this);
    }

    /**
     * Initializes the fields of this object.
     * This method is used by the constructors of any subclasses, in order to implement multiple inheritance (mix-ins).
     * Only for internal use.
     */
    static initialize(obj) { 
    }

    /**
     * Constructs a <code>QueueSpec</code> from a plain JavaScript object, optionally creating a new instance.
     * Copies all relevant properties from <code>data</code> to <code>obj</code> if supplied or a new instance if not.
     * @param {Object} data The plain JavaScript object bearing properties of interest.
     * @param {module:model/QueueSpec} obj Optional instance to populate.
     * @return {module:model/QueueSpec} The populated <code>QueueSpec</code> instance.
     */
    static constructFromObject(data, obj) {
        if (data) {
            obj = obj || new QueueSpec();

            if (data.hasOwnProperty('name')) {
                obj['name'] = ApiClient.convertToType(data['name'], 'String');
            }
            if (data.hasOwnProperty('id')) {
                obj['id'] = ApiClient.convertToType(data['id'], 'String');
            }
            if (data.hasOwnProperty('branchId')) {
                obj['branchId'] = ApiClient.convertToType(data['branchId'], 'String');
            }
        }
        return obj;
    }


}

/**
 * @member {String} name
 */
QueueSpec.prototype['name'] = undefined;

/**
 * @member {String} id
 */
QueueSpec.prototype['id'] = undefined;

/**
 * @member {String} branchId
 */
QueueSpec.prototype['branchId'] = undefined;






export default QueueSpec;

