/**
 * backend-api
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: 1.0.0
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 *
 */

import ApiClient from '../ApiClient';

/**
 * The LatLng model module.
 * @module gp.backend.model/LatLng
 * @version 1.0.0
 */
class LatLng {
    /**
     * Constructs a new <code>LatLng</code>.
     * @alias module:gp.backend.model/LatLng
     */
    constructor() { 
        
        LatLng.initialize(this);
    }

    /**
     * Initializes the fields of this object.
     * This method is used by the constructors of any subclasses, in order to implement multiple inheritance (mix-ins).
     * Only for internal use.
     */
    static initialize(obj) { 
    }

    /**
     * Constructs a <code>LatLng</code> from a plain JavaScript object, optionally creating a new instance.
     * Copies all relevant properties from <code>data</code> to <code>obj</code> if supplied or a new instance if not.
     * @param {Object} data The plain JavaScript object bearing properties of interest.
     * @param {module:gp.backend.model/LatLng} obj Optional instance to populate.
     * @return {module:gp.backend.model/LatLng} The populated <code>LatLng</code> instance.
     */
    static constructFromObject(data, obj) {
        if (data) {
            obj = obj || new LatLng();

            if (data.hasOwnProperty('lng')) {
                obj['lng'] = ApiClient.convertToType(data['lng'], 'Number');
            }
            if (data.hasOwnProperty('lat')) {
                obj['lat'] = ApiClient.convertToType(data['lat'], 'Number');
            }
        }
        return obj;
    }


}

/**
 * @member {Number} lng
 */
LatLng.prototype['lng'] = undefined;

/**
 * @member {Number} lat
 */
LatLng.prototype['lat'] = undefined;






export default LatLng;

